--- a/.github/workflows/azure-webapps-java-jar.yml
+++ b/.github/workflows/azure-webapps-java-jar.yml
@@ -14,10 +14,10 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Set up JDK 17
+      - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
-          java-version: 17
+          java-version: 21
           distribution: temurin
 
       - name: Cache Gradle dependencies
@@ -34,7 +34,7 @@ jobs:
         run: chmod +x gradlew
 
       - name: Build Plugin
-        run: ./gradlew clean build
+        run: ./gradlew shadowJar
 
       - name: Create or Update Release
         uses: softprops/action-gh-release@v1
@@ -42,7 +42,7 @@ jobs:
           tag_name: latest
           name: "Latest Build"
           draft: false
-          prerelease: true
-          files: build/libs/*.jar
+          prerelease: false
+          files: target/*.jar
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
